--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"> 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
@@ -222,10 +222,10 @@
             
             <!-- Removed extra footer tag here -->
             <div class="footer">
-                <p>&copy; 2024 Milan Sahoo. All Rights Reserved. <a href="https://github.com/milan721166">GitHub</a></p>
+                <p>&copy; 2024 Milan Sahoo(M.S). All Rights Reserved. <a href="https://github.com/milan721166">GitHub</a></p>
             </div>
         </footer>  
-    <script src="/static/js/script.js"></script>
+    <script src="/scripts/script.js"></script>
     <script>
         // Change background color
         const bgColorInput = document.getElementById('bg-color');
