Updated website with new changes

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
             <div id="project-list" class="projects-list">
                 <div class="project-item" data-title="Web Development">
-                    <a href="https://github.com/Milan721166/CodeAlpha_Web" target="_blank">
+                    <a href="https://milanprotfilio.vercel.app/" target="_blank">
                         <h3>Web Development</h3>
                         <p>Description of your Web Development project.</p>
                     </a>
@@ -163,7 +163,7 @@
                     </a>
                 </div>
                 <div class="project-item" data-title="AI-Based Web">
-                    <a href="https://github.com/Milan721166/currency_convetor" target="_blank">
+                    <a href="https://github.com/Milan721166/Web-Ai" target="_blank">
                         <h3>AI-Based Web</h3>
                         <p>Description of your AI-Based Web project.</p>
                     </a>
