--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
             <div id="project-list" class="projects-list">
                 <div class="project-item" data-title="Web Development">
-                    <a href="https://milanprotfilio.vercel.app/" target="_blank">
+                    <a href="https://milanprotfiolio.vercel.app/" target="_blank">
                         <h3>Web Development</h3>
                         <p>Description of your Web Development project.</p>
                     </a>
